--- a/guessnumber.html
+++ b/guessnumber.html
@@ -39,7 +39,7 @@
 			resultElm.innerHTML = "Too low";
 			resultElm.style.color = "blue";
 		} else {
-			resultElm.innerHTML = "You found it!";
+			resultElm.innerHTML = "You found it! Refresh the page to play again.";
 			resultElm.style.color = "green";
 		}
 	}
